grid showing problem,grand total not showing problem fixed and updated

--- a/css/style.css
+++ b/css/style.css
@@ -68,7 +68,7 @@ body {
   padding: 10px;
   box-shadow: 10px 10px 20px rgba(57, 150, 150, 0.308);
   border-radius: 5px;
-  margin-right: 30px;
+  margin: 10px 0px 0px 50px;
   position: fixed;
   background-color: rgba(217, 255, 127, 0.65);
 }
